--- a/style.css
+++ b/style.css
@@ -97,6 +97,9 @@ p {
     padding: 0px;
     text-align: center;
   }
+  .content-container {
+    text-align: center;
+  }
   .content {
     text-align: center;
   }
